order-service/src/main/java/com/example/order/error/OrderNotFoundException.java
package com.example.order.error;

public class OrderNotFoundException extends RuntimeException{

    public OrderNotFoundException(String orderId) {
        super("Order not found: " + orderId);
    }
}
